vlib/v/checker/tests/non_matching_functional_args.out
vlib/v/checker/tests/non_matching_functional_args.vv:27:6: error: cannot use `fn (mut Table)` as `fn (Table)` in argument 1 to `sum`
   25 |
   26 | fn main() {
   27 |     sum(fn (mut t Table) {
      |         ~~~~~~~~~~~~~~~~~~
   28 |         t.rename()
   29 |         println(t.name)
Details: `main.MyFn`'s expected argument `zzzz` to be NOT a pointer, but the passed argument `t` is a pointer
vlib/v/checker/tests/non_matching_functional_args.vv:31:6: error: cannot use `fn (mut Table)` as `fn (Table)` in argument 1 to `sum`
   29 |         println(t.name)
   30 |     })
   31 |     sum(xxx)
      |         ~~~
   32 |     sum(yyy)
   33 | }
Details: `main.MyFn`'s expected argument `zzzz` to be NOT a pointer, but the passed argument `mytable` is a pointer
